--- a/index.html
+++ b/index.html
@@ -4,18 +4,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
   <title>Meu portfólio</title>
 </head>
 <body>
   <header>
     <div class="links">
+      <a href="index.html">Sobre</a>
+      <a href="contents.html">Conteúdos</a>
       <a href="https://discordapp.com/invite/gCRAFh" target="_blank">Comunidade</a>
       <a href="mailto:oi@rocketseat.com.br">Email</a>
       <a href="tel:oi@rocketseat.com.br">Telefone</a>
-      <a href="sobre.html" target="_blank">Sobre</a>
     </div>
   </header>
   
+  <div id="wrapper">
+    <img src="assets/rocketseat.png" alt="Rocketseat" id="rocketseat-img">
+
+    <h1>Rocketseat</h1>
+    <p>
+      Uma empresa focada em diminuir a distânia entre você e seus sonhos, 
+      através das técnologias mais modernas e requisitadas do mercado.
+    <p>
+
+    <h2>Técnologias utilizadas:</h2>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
+
+    <div class="links">
+      <a href="https://github.com/Rocketseat" target="_blank">Github</a>
+      <a href="https://www.instagram.com/rocketseat_oficial/?hl=en" target="_blank">Instagram</a>
+      <a href="https://www.facebook.com/rocketseat/" target="_blank">Facebook</a>
+    </div>
+  </div>
 </body>
 </html>
